# service_migration_llm

./: .gitignore  LICENSE  README.md  exportRandomWalkResults.m  exportRealTraceResults.m  pyproject.toml
scripts/: compare_results.py  run_random_walk.py  run_real_trace.py  run_single_user_llm.py  run_single_user_llm_batch.py
src/mdp_migration/: __init__.py  core.py  io.py  plotting.py  policies.py  random_walk.py  real_trace.py  semantic_eval.py  single_user_llm.py
src/mdp_migration/llm/: __init__.py  client.py  controller.py  multi_agent.py  prompting.py  schema.py  validator.py
tests/: test_core.py
